optimizations + metrics